--- a/linklist.paging.html
+++ b/linklist.paging.html
@@ -1,6 +1,19 @@
-<div class="linklist-paging">
-  <div class="paging pure-g">
-    <div class="linklist-filters pure-u-1-3">
+<div class="linklist-paging pure-u-1-2">
+    <div class="linklist-pages">
+      {if="$next_page_url"}
+        <a href="{$next_page_url}" class="paging_newer">
+          <i class="fa fa-arrow-circle-left"></i>
+        </a>
+      {/if}
+      {if="$page_max>1"}<span class="strong">{$page_current} / {$page_max}</span>{/if}
+      {if="$previous_page_url"}
+        <a href="{$previous_page_url}" class="paging_older">
+          <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      {/if}
+    </div>
+
+    <div class="linklist-filters">
       {if="$is_logged_in or !empty($action_plugin)"}
         <span class="linklist-filters-text pure-u-0 pure-u-lg-visible">
           {'Filters'|t}
@@ -33,35 +46,15 @@
           </a>
         {/loop}
       {/if}
-    </div>
 
-
-    <div class="linklist-pages pure-u-1-3">
-      {if="$next_page_url"}
-        <a href="{$next_page_url}" class="paging_newer">
-          <i class="fa fa-arrow-circle-left"></i>
-        </a>
-      {/if}
-      {if="$page_max>1"}<span class="strong">{$page_current} / {$page_max}</span>{/if}
-      {if="$previous_page_url"}
-        <a href="{$previous_page_url}" class="paging_older">
-          <i class="fa fa-arrow-circle-right"></i>
-        </a>
-      {/if}
-
-    </div>
-
-    <div class="linksperpage pure-u-1-3">
-      <div class="pure-u-0 pure-u-lg-visible">{'Links per page'|t}</div>
-      <a href="?linksperpage=20">20</a>
-      <a href="?linksperpage=50">50</a>
-      <a href="?linksperpage=100">100</a>
+    <div class="linksperpage">
       <form method="GET" class="pure-u-0 pure-u-lg-visible">
-        <input type="text" name="linksperpage" placeholder="133">
+        <label class="pure-u-0 pure-u-lg-visible">
+        <input type="text" name="linksperpage" placeholder="133">{'Links per page'|t}</label>
       </form>
       <a href="#" class="filter-off fold-all pure-u-0 pure-u-lg-visible" aria-label="{'Fold all'|t}" title="{'Fold all'|t}">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
       </a>
     </div>
-  </div>
+    </div>
 </div>
