--- a/linklist.html
+++ b/linklist.html
@@ -113,16 +113,14 @@
             </div>
 
             <h2>
+                {if="strpos($value.url, $value.shorturl) === false"}
               <a href="{$value.real_url}">
                 <span class="linklist-link">{$value.title}</span>
-
-                {if="strpos($value.url, $value.shorturl) === false"}
-                  <i class="fa fa-external-link" aria-hidden="true"></i>
+              </a>
                 {else}
-                  <i class="fa fa-sticky-note" aria-hidden="true"></i>
+                <span class="linklist-link">{$value.title}</span>
                 {/if}
 
-              </a>
             </h2>
           </div>
 
@@ -132,20 +130,32 @@
             </div>
           {/if}
 
-          <div class="linklist-item-infos clear">
-            {if="$value.tags"}
-              <div class="linklist-item-tags">
-                <i class="fa fa-tags" aria-hidden="true"></i>
-                {$tag_counter=count($value.taglist)}
-                {loop="value.taglist"}
-                  <span class="label label-tag" title="{$strAddTag}">
-                    <a href="?addtag={$value|urlencode}">{$value}</a>
-                  </span>
-                  {if="$tag_counter - 1 != $counter"}&middot;{/if}
-                {/loop}
-              </div>
-            {/if}
+          {if="strpos($value.url, $value.shorturl) === false"}
+          <div class="linklist-item-infos-url">
+			<a href="{$value.real_url}" aria-label="{$value.title}" title="{$value.title}">{$value.url}</a>
+          </div>
+          {/if}
 
+          {if="!$hide_timestamps || $is_logged_in"}
+            {$updated=$value.updated_timestamp ? $strEdited. format_date($value.updated) : $strPermalink}
+            <div class="linkdate" title="{$updated}">
+              {$value.created|format_date}
+              {if="$value.updated_timestamp"}*{/if}
+            </div>
+          {/if}
+
+          {if="$value.tags"}
+            <div class="linklist-item-tags">
+              {$tag_counter=count($value.taglist)}
+              {loop="value.taglist"}
+                <span class="label label-tag" title="{$strAddTag}">
+                  <a href="?addtag={$value|urlencode}">{$value}</a>
+                </span>
+              {/loop}
+            </div>
+          {/if}
+
+          <div class="linklist-item-infos clear">
             <div class="linklist-item-infos-date-url-block pure-g">
               <div class="linklist-item-infos-dateblock pure-u-lg-7-12 pure-u-1">
                 {if="$is_logged_in"}
@@ -181,16 +191,7 @@
                   {/if}
                 {/if}
                 <a href="?{$value.shorturl}" title="{$strPermalink}">
-                  {if="!$hide_timestamps || $is_logged_in"}
-                    {$updated=$value.updated_timestamp ? $strEdited. format_date($value.updated) : $strPermalink}
-                    <span class="linkdate" title="{$updated}">
-                      <i class="fa fa-clock-o" aria-hidden="true"></i>
-                      {$value.created|format_date}
-                      {if="$value.updated_timestamp"}*{/if}
-                      &middot;
-                    </span>
-                  {/if}
-                  {$strPermalinkLc}
+			<i class="fa fa-link" aria-hidden="true"></i>
                 </a>
 
                 <div class="pure-u-0 pure-u-lg-visible">
@@ -203,12 +204,6 @@
                     {/loop}
                   {/if}
                 </div>
-              </div><div
-                {ignore}do not add space or line break between these div - Firefox issue{/ignore}
-                class="linklist-item-infos-url pure-u-lg-5-12 pure-u-1">
-                <a href="{$value.real_url}" aria-label="{$value.title}" title="{$value.title}">
-                  <i class="fa fa-link" aria-hidden="true"></i> {$value.url}
-                </a>
                 <div class="linklist-item-buttons pure-u-0 pure-u-lg-visible">
                   <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
                 </div>
