--- a/linklist.html
+++ b/linklist.html
@@ -144,70 +144,72 @@
             </div>
           {/if}
 
+          <div id="linklist-controls" class="pure-g">
+          <div class="linklist-item-tags pure-u-1-2">
+          {if="$is_logged_in"}
+             <span class="ctrl-checkbox">
+               <input type="checkbox" class="link-checkbox" value="{$value.id}">
+             </span>
+          {/if}
+
           {if="$value.tags"}
-            <div class="linklist-item-tags">
               {$tag_counter=count($value.taglist)}
               {loop="value.taglist"}
                 <span class="label label-tag" title="{$strAddTag}">
                   <a href="?addtag={$value|urlencode}">{$value}</a>
                 </span>
               {/loop}
-            </div>
           {/if}
+          </div>
 
-          <div class="linklist-item-infos clear">
-            <div class="linklist-item-infos-date-url-block pure-g">
-              <div class="linklist-item-infos-dateblock pure-u-lg-7-12 pure-u-1">
+          <div class="linklist-item-infos pure-u-1-2">
                 {if="$is_logged_in"}
-                  <div class="linklist-item-infos-controls-group pure-u-0 pure-u-lg-visible">
-                    <span class="linklist-item-infos-controls-item ctrl-checkbox">
-                      <input type="checkbox" class="link-checkbox" value="{$value.id}">
-                    </span>
                     <span class="linklist-item-infos-controls-item ctrl-edit">
                       <a href="?edit_link={$value.id}" aria-label="{$strEdit}" title="{$strEdit}"><i class="fa fa-pencil-square-o edit-link" aria-hidden="true"></i></a>
                     </span>
                     <span class="linklist-item-infos-controls-item ctrl-delete">
                       <a href="?delete_link&amp;lf_linkdate={$value.id}&amp;token={$token}" aria-label="{$strDelete}"
-                         title="{$strDelete}" class="delete-link pure-u-0 pure-u-lg-visible confirm-delete">
+                         title="{$strDelete}" class="delete-link">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                       </a>
                     </span>
                     <span class="linklist-item-infos-controls-item ctrl-pin">
                       <a href="?do=pin&amp;id={$value.id}&amp;token={$token}"
-                         title="{$strToggleSticky}" aria-label="{$strToggleSticky}" class="pin-link {if="$value.sticky"}pinned-link{/if} pure-u-0 pure-u-lg-visible">
+                         title="{$strToggleSticky}" aria-label="{$strToggleSticky}" class="pin-link {if="$value.sticky"}pinned-link{/if}">
                         <i class="fa fa-thumb-tack" aria-hidden="true"></i>
                       </a>
                     </span>
-                  </div>
                 {else}
                   {if="$value.sticky"}
-                    <div class="linklist-item-infos-controls-group pure-u-0 pure-u-lg-visible">
                       <span class="linklist-item-infos-controls-item ctrl-pin">
-                        <span title="{$strSticky}" class="pin-link pinned-link pure-u-0 pure-u-lg-visible">
+                        <span title="{$strSticky}" class="pin-link pinned-link">
                           <i class="fa fa-thumb-tack" aria-hidden="true"></i>
                         </span>
                       </span>
-                    </div>
                   {/if}
                 {/if}
-                <a href="?{$value.shorturl}" title="{$strPermalink}">
-			<i class="fa fa-link" aria-hidden="true"></i>
-                </a>
 
-                <div class="pure-u-0 pure-u-lg-visible">
+               <span class="linklist-item-infos-controls-item">
+                <a href="?{$value.shorturl}" title="{$strPermalink}">
+			      <i class="fa fa-link" aria-hidden="true"></i>
+                </a>
+               </span>
+
+                <span class="linklist-item-infos-controls-item">
                   {if="isset($value.link_plugin)"}
-                    &middot;
                     {$link_plugin_counter=count($value.link_plugin)}
                     {loop="$value.link_plugin"}
                       {$value}
-                      {if="$link_plugin_counter - 1 != $counter"}&middot;{/if}
                     {/loop}
                   {/if}
-                </div>
-                <div class="linklist-item-buttons pure-u-0 pure-u-lg-visible">
+                </span>
+
+                <span class="linklist-item-infos-controls-item">
                   <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
-                </div>
+                </span>
               </div>
+           </div>
+
               <div class="mobile-buttons pure-u-1 pure-u-lg-0">
                 {if="isset($value.link_plugin)"}
                   {$link_plugin_counter=count($value.link_plugin)}
@@ -226,8 +228,6 @@
                   <a href="?edit_link={$value.id}" aria-label="{$strEdit}" title="{$strEdit}"><i class="fa fa-pencil-square-o edit-link" aria-hidden="true"></i></a>
                 {/if}
               </div>
-            </div>
-          </div>
         </div>
       {/loop}
     </div>
