--- a/addlink.html
+++ b/addlink.html
@@ -6,8 +6,8 @@
 <body>
 {include="page.header"}
 <div class="pure-g">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div id="addlink-form" class="page-form  page-form-light pure-u-lg-1-3 pure-u-22-24">
+  <div class="pure-u-1-24"></div>
+  <div id="addlink-form" class="page-form  page-form-light pure-u-22-24">
     <h2 class="window-title">{"Shaare a new link"|t}</h2>
     <form method="GET" action="#" name="addform" class="addform">
       <div>
