Worked tools and config pages

--- a/page.header.html
+++ b/page.header.html
@@ -62,7 +62,7 @@
               <a href="?do=login" class="pure-menu-link"
                  data-open-id="header-login-form"
                  id="login-button" aria-label="{'Login'|t}" title="{'Login'|t}">
-                <i class="fa fa-user" aria-hidden="true"></i>
+                <i class="fa fa-user" aria-hidden="true"></i> Login
               </a>
             </li>
           {else}
