--- a/editlink.html
+++ b/editlink.html
@@ -62,7 +62,7 @@
 
       <div class="submit-buttons center">
         <input type="submit" name="save_edit" class="" id="button-save-edit"
-               value="{if="$link_is_new"}{'Save'|t}{else}{'Apply Changes'|t}{/if}">
+               value="{if="$link_is_new"}{'Save'|t}{else}{'Update'|t}{/if}">
         {if="!$link_is_new"}
         <a href="?delete_link&amp;lf_linkdate={$link.id}&amp;token={$token}"
            title="" name="delete_link" class="button button-red confirm-delete">
