--- a/linklist.html
+++ b/linklist.html
@@ -110,36 +110,32 @@
 		{/if}
 		</h2>
 
-		<div class="linklist-item-infos pure-u-2-5">
+		<div class="pure-u-2-5">
+		<div class="linklist-item-infos">
 			{if="$is_logged_in"}
 			<span class="linklist-item-infos-controls-item ctrl-edit">
-			<a href="?edit_link={$value.id}" aria-label="{$strEdit}" title="{$strEdit}"><i class="fa fa-pencil-square-o edit-link" aria-hidden="true"></i></a>
+			<a href="?edit_link={$value.id}" class="fa fa-pencil-square-o edit-link" aria-label="{$strEdit}" title="{$strEdit}"></a>
 			</span>
 
 			<span class="linklist-item-infos-controls-item ctrl-delete">
 			<a href="?delete_link&amp;lf_linkdate={$value.id}&amp;token={$token}" aria-label="{$strDelete}"
-			title="{$strDelete}" class="delete-link">
-			<i class="fa fa-trash" aria-hidden="true"></i></a>
+			title="{$strDelete}" class="fa fa-trash delete-link"></a>
 			</span>
 
 			<span class="linklist-item-infos-controls-item ctrl-pin">
 			<a href="?do=pin&amp;id={$value.id}&amp;token={$token}"
-			title="{$strToggleSticky}" aria-label="{$strToggleSticky}" class="pin-link {if="$value.sticky"}pinned-link{/if}">
-			<i class="fa fa-thumb-tack" aria-hidden="true"></i></a>
+			title="{$strToggleSticky}" aria-label="{$strToggleSticky}" class="fa fa-thumb-tack pin-link {if="$value.sticky"}pinned-link{/if}"></a>
 			</span>
 			{else}
 			{if="$value.sticky"}
 			<span class="linklist-item-infos-controls-item ctrl-pin">
-				<span title="{$strSticky}" class="pin-link pinned-link">
-				<i class="fa fa-thumb-tack" aria-hidden="true"></i>
-			</span>
+				<span title="{$strSticky}" class="fa fa-thumb-tack pin-link pinned-link"></span>
 			</span>
 			{/if}
 			{/if}
 
 			<span class="linklist-item-infos-controls-item">
-			<a href="?{$value.shorturl}" title="{$strPermalink}">
-			<i class="fa fa-link" aria-hidden="true"></i></a>
+			<a href="?{$value.shorturl}" class="fa fa-link" title="{$strPermalink}"></a>
 			</span>
 
 			<div class="linklist-item-infos-controls-item">
@@ -152,8 +148,9 @@
 			</div>
 
                <span class="linklist-item-infos-controls-item">
-                 <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+                 <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button fa fa-chevron-up" aria-hidden="true"></a>
                </span>
+		</div>
 		</div>
 	</div>
 
@@ -209,8 +206,7 @@
 		{if="$is_logged_in"}
 			&middot;
 			<a href="?delete_link&amp;lf_linkdate={$value.id}&amp;token={$token}" aria-label="{$strDelete}"
-			title="{$strDelete}" class="delete-link confirm-delete">
-			<i class="fa fa-trash" aria-hidden="true"></i>
+			title="{$strDelete}" class="fa fa-trash delete-link confirm-delete"></a>
 			</a>
 			&middot;
 			<a href="?edit_link={$value.id}" aria-label="{$strEdit}" title="{$strEdit}"><i class="fa fa-pencil-square-o edit-link" aria-hidden="true"></i></a>
@@ -231,7 +227,19 @@
 
 <div id="linklist-paging-bottom-block" class="pure-g link-count-block">
 <div id="linklist-paging-bottom-content" class="pure-u-1">
-{include="linklist.paging"}
+   <div class="linklist-pages">
+      {if="$next_page_url"}
+        <a href="{$next_page_url}" class="paging_newer">
+          <i class="fa fa-arrow-circle-left"></i>
+        </a>
+      {/if}
+      {if="$page_max>1"}<span class="strong">{$page_current} / {$page_max}</span>{/if}
+      {if="$previous_page_url"}
+        <a href="{$previous_page_url}" class="paging_older">
+          <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      {/if}
+    </div>
 </div>
 </div>
 
