--- a/loginform.html
+++ b/loginform.html
@@ -17,10 +17,10 @@
 </div>
 {else}
   <div class="pure-g">
-    <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-    <div id="login-form" class="page-form page-form-light pure-u-lg-1-3 pure-u-22-24 login-form-container">
+    <div class="pure-u-1-24"></div>
+    <div id="login-form" class="page-form page-form-light pure-u-22-24 login-form-container">
+      <h2 class="window-title">{'Login'|t}</h2>
       <form method="post" name="loginform">
-        <h2 class="window-title">{'Login'|t}</h2>
         <div>
           <input type="text" name="login" aria-label="{'Username'|t}" placeholder="{'Username'|t}"
              {if="!empty($username)"}value="{$username}"{/if} class="autofocus">
