--- a/tools.html
+++ b/tools.html
@@ -7,48 +7,48 @@
 {include="page.header"}
 
 <div class="pure-g">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div class="pure-u-lg-1-3 pure-u-22-24 page-form page-form-light">
+  <div class="pure-u-1-24"></div>
+  <div class="pure-u-22-24 page-form page-form-light">
     <h2 class="window-title">{'Settings'|t}</h2>
     <div class="tools-item">
       <a href="?do=configure" title="{'Change Shaarli settings: title, timezone, etc.'|t}">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Configure your Shaarli'|t}</span>
+        <span class="pure-button">{'Configure your Shaarli'|t}</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="?do=pluginadmin" title="{'Enable, disable and configure plugins'|t}">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Plugin administration'|t}</span>
+        <span class="pure-button">{'Plugin administration'|t}</span>
       </a>
     </div>
     {if="!$openshaarli"}
       <div class="tools-item">
         <a href="?do=changepasswd" title="{'Change your password'|t}">
-          <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Change password'|t}</span>
+          <span class="pure-button">{'Change password'|t}</span>
         </a>
       </div>
     {/if}
     <div class="tools-item">
       <a href="?do=changetag" title="{'Rename or delete a tag in all links'|t}">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Manage tags'|t}</span>
+        <span class="pure-button">{'Manage tags'|t}</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="?do=import"
          title="{'Import Netscape HTML bookmarks (as exported from Firefox, Chrome, Opera, delicious...)'|t}">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Import links'|t}</span>
+        <span class="pure-button">{'Import links'|t}</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="?do=export"
          title="{'Export Netscape HTML bookmarks (which can be imported in Firefox, Chrome, Opera, delicious...)'|t}">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Export database'|t}</span>
+        <span class="pure-button">{'Export database'|t}</span>
       </a>
     </div>
 
     {if="$thumbnails_enabled"}
       <div class="tools-item">
         <a href="?do=thumbs_update" title="{'Synchronize all link thumbnails'|t}">
-          <span class="pure-button pure-u-lg-2-3 pure-u-3-4">{'Synchronize thumbnails'|t}</span>
+          <span class="pure-button">{'Synchronize thumbnails'|t}</span>
         </a>
       </div>
     {/if}
@@ -65,8 +65,8 @@
 </div>
 
 <div class="pure-g">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div class="pure-u-lg-1-3 pure-u-22-24 page-form page-form-light">
+  <div class="pure-u-1-24"></div>
+  <div class="pure-u-22-24 page-form page-form-light">
     <h2 class="window-title">Bookmarklets</h2>
     <p>
       {'Drag one of these button to your bookmarks toolbar or right-click it and "Bookmark This Link"'|t},
@@ -93,7 +93,7 @@
             );
           }
         )();">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">✚ {'Shaare link'|t}</span>
+        <span class="pure-button">✚ {'Shaare link'|t}</span>
       </a>
     </div>
     <div class="tools-item">
@@ -114,40 +114,40 @@
             );
           }
         )();">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">✚ {'Add Note'|t}</span>
+        <span class="pure-button">✚ {'Add Note'|t}</span>
       </a>
     </div>
   </div>
 </div>
 
 <div class="pure-g">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div class="pure-u-lg-1-3 pure-u-22-24 page-form page-form-light">
+  <div class="pure-u-1-24"></div>
+  <div class="pure-u-22-24 page-form page-form-light">
     <h2 class="window-title">{'3rd party'|t}</h2>
     <div class="tools-item">
       <a href="https://addons.mozilla.org/fr/firefox/addon/shaarli/">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">Firefox {'plugin'|t}</span>
+        <span class="pure-button">Firefox {'plugin'|t}</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="https://chrome.google.com/webstore/detail/shiny-shaarli/hajdfkmbdmadjmmpkkbbcnllepomekin">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">Chrome {'plugin'|t}</span>
+        <span class="pure-button">Chrome {'plugin'|t}</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="https://play.google.com/store/apps/details?id=com.dimtion.shaarlier&hl=fr">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">Android Shaarlier</span>
+        <span class="pure-button">Android Shaarlier</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="https://stakali.toneiv.eu/">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">Android Stakali</span>
+        <span class="pure-button">Android Stakali</span>
       </a>
     </div>
     <div class="tools-item">
       <a href="https://itunes.apple.com/app/ShaarliOS/id1027441388?mt=8"
          title="iOS">
-        <span class="pure-button pure-u-lg-2-3 pure-u-3-4">iOS</span>
+        <span class="pure-button">iOS</span>
       </a>
     </div>
   </div>
