--- a/linklist.html
+++ b/linklist.html
@@ -148,7 +148,7 @@
 			</div>
 
                <span class="linklist-item-infos-controls-item">
-                 <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button fa fa-chevron-up" aria-hidden="true"></a>
+                 <a href="#" aria-label="{$strFold}" title="{$strFold}" class="fold-button" aria-hidden="true"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
                </span>
 		</div>
 		</div>
