Use pure-g-full

--- a/editlink.html
+++ b/editlink.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   {include="page.header"}
-  <div id="editlinkform" class="edit-link-container" class="pure-g">
-    <div class="pure-u-lg-1-5 pure-u-1-24"></div>
+  <div id="editlinkform" class="edit-link-container" class="pure-g pure-g-full">
+    <div class="pure-u-2-24"></div>
     <form method="post"
           name="linkform"
           action="{$base_path}/admin/shaare"
-          class="page-form pure-u-22-24 page-form page-form-light"
+          class="page-form pure-u-20-24 page-form page-form-light"
     >
       <h2 class="window-title">
         {if="!$link_is_new"}{'Edit Shaare'|t}{else}{'New Shaare'|t}{/if}
