--- a/page.header.html
+++ b/page.header.html
@@ -1,5 +1,5 @@
 <div id="shaarli-menu">
-<div class="shaarli-menu pure-g">
+<div class="shaarli-menu pure-g pure-g-full">
   <div class="pure-u-lg-0 pure-u-1">
     <div class="pure-menu">
      <header role="banner">
@@ -123,7 +123,7 @@
 
 <main id="content" class="container" role="main">
   <div id="actions" class="subheader-form">
-    <div class="pure-g">
+    <div class="pure-g pure-g-full">
       <div class="pure-u-1">
         <a href="" id="actions-delete" class="button">
           <i class="fa fa-trash" aria-hidden="true"></i>
