--- a/tools.html
+++ b/tools.html
@@ -6,9 +6,9 @@
 <body>
 {include="page.header"}
 
-<div class="pure-g">
-  <div class="pure-u-1-24"></div>
-  <div class="pure-u-22-24 page-form page-form-light">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-form-light">
     <h2 class="window-title">{'Settings'|t}</h2>
     <div class="tools-item">
       <a href="{$base_path}/admin/configure" title="{'Change Shaarli settings: title, timezone, etc.'|t}">
@@ -64,9 +64,9 @@
   <div class="clear"></div>
 </div>
 
-<div class="pure-g">
-  <div class="pure-u-1-24"></div>
-  <div class="pure-u-22-24 page-form page-form-light">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-form-light">
     <h2 class="window-title">Bookmarklets</h2>
     <p>
       {'Drag one of these button to your bookmarks toolbar or right-click it and "Bookmark This Link"'|t},
@@ -120,9 +120,9 @@
   </div>
 </div>
 
-<div class="pure-g">
-  <div class="pure-u-1-24"></div>
-  <div class="pure-u-22-24 page-form page-form-light">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-form-light">
     <h2 class="window-title">{'3rd party'|t}</h2>
     <div class="tools-item">
       <a href="https://addons.mozilla.org/fr/firefox/addon/shaarli/">
