--- a/addlink.html
+++ b/addlink.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 {include="page.header"}
-<div class="pure-g">
-  <div class="pure-u-1-24"></div>
-  <div id="addlink-form" class="page-form  page-form-light pure-u-22-24">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div id="addlink-form" class="page-form  page-form-light pure-u-20-24">
     <h2 class="window-title">{"Shaare a new link"|t}</h2>
     <form method="GET" action="{$base_path}/admin/shaare" name="addform" class="addform">
       <div>
