--- a/changepassword.html
+++ b/changepassword.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 {include="page.header"}
-<div class="pure-g">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div id="addlink-form" class="page-form page-form-light pure-u-lg-1-3 pure-u-22-24">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div id="addlink-form" class="page-form page-form-light pure-u-20-24">
     <h2 class="window-title">{"Change password"|t}</h2>
     <form method="POST" action="{$base_path}/admin/password" name="changepasswordform" id="changepasswordform">
       <div>
