--- a/configure.html
+++ b/configure.html
@@ -12,9 +12,9 @@
 {$ratioInputMobile='1-8'}
 
 <form method="POST" action="{$base_path}/admin/configure" name="configform" id="configform">
-  <div class="pure-g">
-    <div class="pure-u-1-24"></div>
-    <div class="pure-u-22-24 page-form page-form-complete">
+  <div class="pure-g pure-g-full">
+    <div class="pure-u-2-24"></div>
+    <div class="pure-u-20-24 page-form page-form-complete">
       <h2 class="window-title">{'Configure'|t}</h2>
 
 <p>
