--- a/daily.html
+++ b/daily.html
@@ -6,9 +6,9 @@
 <body>
 {include="page.header"}
 
-<div class="pure-g">
-  <div class="pure-u-lg-1-6 pure-u-1-24"></div>
-  <div class="pure-u-lg-2-3 pure-u-22-24 page-form page-visitor" id="daily">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-visitor" id="daily">
     <h2 class="window-title">
       {'The Daily Shaarli'|t}
       <a href="{$base_path}/daily-rss" title="{'1 RSS entry per day'|t}"><i class="fa fa-rss"></i></a>
