--- a/export.html
+++ b/export.html
@@ -7,9 +7,9 @@
 {include="page.header"}
 
 <form method="POST" action="{$base_path}/admin/export" name="exportform" id="exportform">
-  <div class="pure-g">
-    <div class="pure-u-lg-1-4 pure-u-1-24"></div>
-    <div class="pure-u-lg-1-2 pure-u-22-24 page-form page-form-complete">
+  <div class="pure-g pure-g-full">
+    <div class="pure-u-2-24"></div>
+    <div class="pure-u-20-24 page-form page-form-complete">
       <div>
         <h2 class="window-title">{"Export Database"|t}</h2>
       </div>
