--- a/install.html
+++ b/install.html
@@ -11,9 +11,9 @@
 {$ratioInputMobile='1-8'}
 
 <form method="POST" action="{$base_path}/install" name="installform" id="installform">
-<div class="pure-g">
-  <div class="pure-u-lg-1-6 pure-u-1-24"></div>
-  <div class="pure-u-lg-2-3 pure-u-22-24 page-form page-form-complete">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-form-complete">
     <h2 class="window-title">{'Install Shaarli'|t}</h2>
 
     <div class="center">
