--- a/loginform.html
+++ b/loginform.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 {include="page.header"}
-<div class="pure-g">
-  <div class="pure-u-1-24"></div>
-  <div id="login-form" class="page-form page-form-light pure-u-22-24 login-form-container">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div id="login-form" class="page-form page-form-light pure-u-20-24 login-form-container">
     <form method="post" name="loginform">
       <h2 class="window-title">{'Login'|t}</h2>
       <div>
