--- a/page.footer.html
+++ b/page.footer.html
@@ -1,6 +1,6 @@
 </main>
 
-<div class="pure-g">
+<div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
   <footer id="footer" class="pure-u-20-24 footer-container" role="contentinfo">
     <i class="fa fa-shaarli" aria-hidden="true"></i>
