--- a/picwall.html
+++ b/picwall.html
@@ -15,9 +15,9 @@
   </div>
 {/if}
 
-<div class="pure-g">
-  <div class="pure-u-lg-1-6 pure-u-1-24"></div>
-  <div class="pure-u-lg-2-3 pure-u-22-24 page-form page-visitor">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-visitor">
     {$countPics=count($linksToDisplay)}
     <h2 class="window-title">{'Picture Wall'|t} - {$countPics} {'pics'|t}</h2>
 
