--- a/pluginsadmin.html
+++ b/pluginsadmin.html
@@ -17,9 +17,9 @@
 </noscript>
 
 <form method="POST" action="{$base_path}/admin/plugins" name="pluginform" id="pluginform" class="pluginform-container">
-  <div class="pure-g">
-    <div class="pure-u-lg-1-8 pure-u-1-24"></div>
-    <div class="pure-u-lg-3-4 pure-u-22-24 page-form page-form-complete">
+  <div class="pure-g pure-g-full">
+    <div class="pure-u-2-24"></div>
+    <div class="pure-u-20-24 page-form page-form-complete">
       <h2 class="window-title">{'Plugin administration'|t}</h2>
 
       <section id="enabled_plugins">
@@ -59,14 +59,6 @@
                 </tr>
               {/loop}
             </tbody>
-            <tfoot>
-              <tr>
-                <th class="center">{'Disable'|t}</th>
-                <th>{'Name'|t}</th>
-                <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
-                <th class="center">{'Order'|t}</th>
-              </tr>
-            </tfoot>
           </table>
           {/if}
         </div>
@@ -103,34 +95,27 @@
                 </tr>
               {/loop}
             </tbody>
-            <tfoot>
-              <tr>
-                <th class="center">{'Enable'|t}</th>
-                <th>{'Name'|t}</th>
-                <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
-              </tr>
-            </tfoot>
           </table>
           {/if}
         </div>
       </section>
 
-      <div class="center more">
+      <p class="more">
         {"More plugins available"|t}
         <a href="doc/html/Community-&-Related-software/#third-party-plugins">{"in the documentation"|t}</a>.
-      </div>
-      <div class="center">
+    </p>
+     <p>
         <input type="submit" value="{'Save'|t}" name="save">
-      </div>
+    </p>
     </div>
   </div>
   <input type="hidden" name="token" value="{$token}">
 </form>
 
 <form action="{$base_path}/admin/plugins" method="POST">
-  <div class="pure-g">
-    <div class="pure-u-lg-1-8 pure-u-1-24"></div>
-    <div class="pure-u-lg-3-4 pure-u-22-24 page-form page-form-light">
+  <div class="pure-g pure-g-full">
+    <div class="pure-u-2-24"></div>
+    <div class="pure-u-20-24 page-form page-form-light">
       <h2 class="window-title">{'Plugin configuration'|t}</h2>
       <section id="plugin_parameters">
         <div>
