--- a/tag.list.html
+++ b/tag.list.html
@@ -8,9 +8,9 @@
 
 {include="tag.sort"}
 
-<div class="pure-g">
-  <div class="pure-u-lg-1-6 pure-u-1-24"></div>
-  <div class="pure-u-lg-2-3 pure-u-22-24 page-form page-visitor">
+<div class="pure-g pure-g-full">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-visitor">
     {$countTags=count($tags)}
     <h2 class="window-title">{'Tag list'|t} - {$countTags} {'tags'|t}</h2>
     {if="!empty($search_tags)"}
