--- a/thumbnails.html
+++ b/thumbnails.html
@@ -6,9 +6,9 @@
 <body>
 {include="page.header"}
 
-<div class="pure-g thumbnails-page-container">
-  <div class="pure-u-lg-1-3 pure-u-1-24"></div>
-  <div class="pure-u-lg-1-3 pure-u-22-24 page-form page-form-light">
+<div class="pure-g pure-g-full thumbnails-page-container">
+  <div class="pure-u-2-24"></div>
+  <div class="pure-u-20-24 page-form page-form-light">
     <h2 class="window-title">{'Thumbnails update'|t}</h2>
 
     <div class="pure-g">
